Added JS to complete form's rotation & the project

--- a/style.css
+++ b/style.css
@@ -17,12 +17,21 @@ html {
     height: 100vh;
     background: linear-gradient(rgba(31, 7, 7, 0.7), rgba(0, 0, 0, 0.7)), url(images/stones.jpg) center no-repeat;
     background-size: cover;
+    perspective: 100rem;
 }
 
 .forms-wrapper { 
+    transform-style: preserve-3d;
     position: absolute;
     top: calc(50% - 17.5rem); /* We use calc to calc 50% minus the half of the width */
     left: calc(50% - 25rem); /* We use calc to calc 50% minus the half of the height */
+    transform: translateY(-10deg);
+    transition: transform 0.5s, left 0.5s;
+}
+
+.forms-wrapper.change { 
+    transform: rotateY(100deg);
+    left: calc(50% + 25rem);
 }
 
 .forms-wrapper form { 
@@ -38,6 +47,10 @@ html {
     position: absolute;
 }
 
+.signup-form { 
+    transform: rotateY(270deg) translateZ(25rem) translateX(-25rem);
+}
+
 form a { 
     position: absolute;
     background-color: #fff;
@@ -49,14 +62,14 @@ form a {
 }
 
 .signup-btn { 
-    padding: 10px 8px 10px 28px;
-    border-radius: 100% 5px 5px 100%;
+    padding: 10px;
+    border-radius: 5px;
     left: 20px;
 }
 
 .signin-btn { 
-    padding: 10px 28px 10px 8px;
-    border-radius: 5px 100% 100% 5px;
+    padding: 10px;
+    border-radius: 5px;
     right: 20px;
 }
 
